cluster-config/validating.config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "tekton.webhook.config"
webhooks:
  - name: "tekton.webhook.config"
    rules:
      - apiGroups: ["tekton.dev"]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pipelines", "tasks"]
        scope: "*"
    clientConfig:
      service:
        namespace: default
        name: tekton-webhook
        path: /validate
        port: 443
      caBundle: |
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURQekNDQWllZ0F3SUJBZ0lVWi9GNnN2dit5K2lJWDRNa2ZqNG9QYkJjT2ZVd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0x6RXRNQ3NHQTFVRUF3d2tRV1J0YVhOemFXOXVJRU52Ym5SeWIyeHNaWElnVjJWaWFHOXZheUJFWlcxdgpJRU5CTUI0WERUSXpNVEV5TVRJeU1URXlPRm9YRFRJek1USXlNVEl5TVRFeU9Gb3dMekV0TUNzR0ExVUVBd3drClFXUnRhWE56YVc5dUlFTnZiblJ5YjJ4c1pYSWdWMlZpYUc5dmF5QkVaVzF2SUVOQk1JSUJJakFOQmdrcWhraUcKOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXY3VkwvZFNNcDZKM0FrNXE0TVVVSE5EV29LaC9yMDVhWDE2Rwp1UlVyZWltNjlrV1ZKU2Vz [...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 2
